feat: Update spring boot 3.4.3